robertsanseries_ffmpeg_cli_wrapper_files = files(
	'src/exceptions/CodecNotEnabledException.vala',
	'src/exceptions/FileOrDirectoryNotFoundException.vala',
	'src/exceptions/IllegalArgumentException.vala',
	'src/exceptions/IOException.vala'
	'src/exceptions/NullReferenceException.vala',
	'src/utils/StringUtil.vala',
	'src/FFcommon.vala',
	'src/FFconvert.vala',
	'src/FFmpeg.vala',
)