#add_project_arguments(['--vapidir', join_paths(meson.current_source_dir(), 'vapi')], language: 'vala')

robertsanseries_ffmpeg_cli_wrapper_files = files(
	'src/exceptions/CodecNotEnabledException.vala',
	'src/exceptions/FileOrDirectoryNotFoundException.vala',
	'src/exceptions/IllegalArgumentException.vala',
	'src/exceptions/IOException.vala'
	'src/exceptions/NullReferenceException.vala',
	'src/probe/FFmpegDisposition.vala',
	'src/probe/FFprobeError.vala',
	'src/probe/FFprobeFormat.vala',
	'src/probe/FFprobeStream.vala',
	'src/utils/StringUtil.vala',
	'src/FFconvert.vala',
	'src/FFmpeg.vala',
	'src/FFprobe.vala',
)